name:                lambda
version:             0.1.0.0
synopsis:            Lambda Calculus interpreter
-- description:
-- license:
author:              Aleksey Demidov
maintainer:          aleksey.dem@gmail.com
-- copyright:
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable lambda
  ghc-options:         -O2 -threaded -Wall
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.6 && <4.7, parsec >=3.1 && <3.2
  hs-source-dirs:      src
  default-language:    Haskell2010
